# sqly

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/c0_intro/: .env  Cargo.toml
examples/c0_intro/src/: main.rs
examples/c1_derive/: c11_derive_delete.rs  c12_derive_insert.rs  c13_derive_update.rs  c14_rename_column.rs  c15_bind_argument.rs  c16_override_type.rs  main.rs
examples/c2_select/: c21_derive_table.rs  c22_derive_select.rs  c23_select_where.rs  c24_default_from.rs  c25_from_flat_row.rs  c26_sql_returning.rs  main.rs
examples/c3_sequel/: c31_customize_sql.rs  c32_set_arguments.rs  c33_optional_args.rs  c34_derive_struct.rs  c35_multi_tasking.rs  c36_a_lot_at_once.rs  main.rs
examples/c4_foreign/: _main.rs
examples/use_cases/: _main.rs
sqly-macros/: Cargo.toml
sqly-macros/src/: derive.rs  lib.rs
sqly-macros/src/cache/: construct.rs  mod.rs  params.rs
sqly-macros/src/parse/: base.rs  mod.rs  rules.rs  types.rs
sqly-macros/src/parse/types/: delete.rs  insert.rs  select.rs  update.rs
sqly-macros/src/quote/: base.rs  mod.rs  rules.rs  types.rs
sqly-macros/src/quote/types/: delete.rs  insert.rs  select.rs  update.rs
src/: lib.rs  sqly.rs
src/docs/: documentation.md  notation.md
src/sqly/: macros.rs  rules.rs  traits.rs
src/sqly/macros/: delete.rs  insert.rs  select.rs  update.rs
src/sqly/traits/: delete.rs  insert.rs  select.rs  update.rs
tests/: debug.rs  error.rs
tests/debug/: table.rs  table.stderr  types.rs  types.stderr
tests/error/: cache.rs  cache.stderr  parse.rs  parse.stderr  types.rs  types.stderr
tests/error/attrs/: foreign.rs  foreign.stderr  optional.rs  optional.stderr  returning.rs  returning.stderr
tests/error/types/: delete.rs  delete.stderr  insert.rs  insert.stderr  select.rs  select.stderr  update.rs  update.stderr
