[workspace]
members = ["examples/c0_intro"]
default-members = [".", "sqly-macros"]

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LMOORS30/sqly"
authors = ["Lander Moors <lander.moors@decathlon.com>"]
keywords = ["database", "async", "postgres"]
categories = ["database", "asynchronous"]

[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "sqly"
description = "A lightweight macro system on top of sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
postgres = ["sqlx/postgres", "sqly-macros/postgres"]
mariadb = ["sqlx/mysql", "sqly-macros/mariadb"]
sqlite = ["sqlx/sqlite", "sqly-macros/sqlite"]
mysql = ["sqlx/mysql","sqly-macros/mysql"]
serde = ["dep:serde", "sqly-macros/serde"]
checked = ["sqlx/macros", "sqly-macros/checked"]
default = ["checked"]

[workspace.dependencies]
sqly-macros = { version = "=0.4.0", path = "sqly-macros", default-features = false }

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
sqlx = { version = "0.8.6", default-features = false }
sqly-macros = { workspace = true }

[dev-dependencies]
anyhow = { version = "1.0" }
sqlx = { version = "0.8.6" }
trybuild = "1.0"

[[example]]
name = "c1_derive"
crate-type = ["lib"]
required-features = ["postgres"]
test = true

[[example]]
name = "c2_select"
crate-type = ["lib"]
required-features = ["postgres"]
test = true

[[example]]
name = "c3_sequel"
crate-type = ["lib"]
required-features = ["postgres"]
test = true

# [[example]]
# name = "c4_foreign"
# crate-type = ["lib"]
# required-features = ["postgres"]
# test = true
# 
# [[example]]
# name = "use_cases"
# crate-type = ["lib"]
# required-features = ["postgres"]
# test = true

[package.metadata.docs.rs]
features = ["postgres", "serde"]
targets = ["x86_64-unknown-linux-gnu"]
