[package]
name = "sqly-macros"
description = "sqly-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
postgres = []
sqlite = []
mysql = []
unchecked = []

[dependencies]
heck = "0.5.0"
paste = "1.0.0"
prettyplease = "0.2.20"
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = "2.0.0"
