[package]
name = "sqly-macros"
description = "sqly-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
postgres = []
mariadb = []
sqlite = []
mysql = []
unchecked = []

[dependencies]
heck = "0.5"
paste = "1.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
unicode-ident = "1.0"
