[package]
name = "sqly-macros"
description = "sqly-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
postgres = []
mariadb = []
sqlite = []
mysql = []
serde = []
checked = []
default = ["checked"]

[dependencies]
either = { version = "1.13.0", default-features = false }
heck = { version = "0.5", default-features = false }
paste = { version = "1.0", default-features = false }
prettyplease = { version = "0.2", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = true }
unicode-ident = { version = "1.0", default-features = false }
